[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Nikolay Bystritskiy <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
pandas = { version = "*", extras = ["performance", "plot"] }
numpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
